--- a/public/boxdocs/folder/Installation/index.html
+++ b/public/boxdocs/folder/Installation/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -15,7 +15,7 @@
   <meta name="description" content="IntroductionArtbox is a modified version of GIMP, if you can build GIMP, you can build Artbox. Artbox does not exist as an individual application, it relies on many parts to function and many apps are used to construct it. You need to create a build environment for it first, like an aquarium for a fish. The following is a guide, for a Debian system. It will be a unique process for your system, and may require further research. Good luck!" />
 
   
-    <link rel="canonical" href="http://localhost:1313/boxdocs/folder/Installation/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/boxdocs/folder/Installation/" itemprop="url" />
   
 
   
@@ -23,7 +23,7 @@
 <meta property="og:title" content="" />
 <meta property="og:description" content="IntroductionArtbox is a modified version of GIMP, if you can build GIMP, you can build Artbox. Artbox does not exist as an individual application, it relies on many parts to function and many apps are used to construct it. You need to create a build environment for it first, like an aquarium for a fish. The following is a guide, for a Debian system. It will be a unique process for your system, and may require further research. Good luck!" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/boxdocs/folder/Installation/" /><meta property="article:section" content="boxdocs" />
+<meta property="og:url" content="https://example.org/boxdocs/folder/Installation/" /><meta property="article:section" content="boxdocs" />
 
 
 
@@ -101,7 +101,7 @@
             title="Installation"
             href="/boxdocs/folder/Installation"
             
-            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-text-gray-600 hover:hx-text-gray-800 dark:hx-text-gray-400 dark:hover:hx-text-gray-200"
+            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-font-medium"
           >
             <span class="hx-text-center">Installation</span>
           </a><a
