--- a/public/boxdocs/folder/data/index.html
+++ b/public/boxdocs/folder/data/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Artbox Repository: The parent project, it references a commit in gimp-data. gimp-data: The submodule that points to a different repository. Understanding the Submodule Artbox Build Repository: This is the parent repository that contains the ‘gimp-data’ submodule. Artbox Data Submodule: The directory within the Artbox repository that links to the Artbox data repository. Specific Commit in Artbox Data: The submodule is fixed to a specific commit in the Artbox data repository. .gitmodules File: This file in the parent repository specifies the submodule’s repository location. graph LR;subgraph Parent Repo / SuperprojectA([Artbox Build Repository])D([.gitmodules File])endB([Artbox Data Submodule])C([Specific Commit in Artbox Data Repository])A --&gt; BB --&gt; CD -.-&gt; B" />
 
   
-    <link rel="canonical" href="http://localhost:1313/boxdocs/folder/data/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/boxdocs/folder/data/" itemprop="url" />
   
 
   
@@ -49,7 +49,7 @@ graph LR;
     B --&gt; C
     D -.-&gt; B" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/boxdocs/folder/data/" /><meta property="article:section" content="boxdocs" />
+<meta property="og:url" content="https://example.org/boxdocs/folder/data/" /><meta property="article:section" content="boxdocs" />
 
 
 
