--- a/public/boxdocs/folder/index.html
+++ b/public/boxdocs/folder/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -15,7 +15,7 @@
   <meta name="description" content="Introduction Welcome to this series of guides designed for those who are new to Linux and want to explore its capabilities. Whether you’re wondering what Linux is, how to navigate its different distributions, or looking to learn about essential tools like Git, Debian, and Clonezilla for backups, these guides will help you get started. Each guide provides a clear, step-by-step approach to understanding and using Linux, breaking down complex concepts into simple terms." />
 
   
-    <link rel="canonical" href="http://localhost:1313/boxdocs/folder/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/boxdocs/folder/" itemprop="url" />
   
 
   
@@ -23,7 +23,7 @@
 <meta property="og:title" content="Artbox Docs" />
 <meta property="og:description" content="Art, Painting, Illustration" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/boxdocs/folder/" />
+<meta property="og:url" content="https://example.org/boxdocs/folder/" />
 
   
   <meta itemprop="name" content="Artbox Docs">
@@ -85,7 +85,7 @@
             title="Documentation"
             href="/boxdocs/folder/"
             
-            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-text-gray-600 hover:hx-text-gray-800 dark:hx-text-gray-400 dark:hover:hx-text-gray-200"
+            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-font-medium"
           >
             <span class="hx-text-center">Documentation</span>
           </a><a
