--- a/public/boxdocs/folder/technical-guide/index.html
+++ b/public/boxdocs/folder/technical-guide/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Contents Updating Artbox to GIMP Dev Step 1: Construct the Common Base Step 2: Construct Feature Branches from the Common Base Step 3: Construct Artbox from the Common Base and Feature Branches Convert Branches Example of a Compound Convert Branch: convert-paintbrush-all-merged Feature Branches Example of a Compound Feature Branch: feature-paintbrush-options Notes Branch Development Flow for GIMP to Artbox" />
 
   
-    <link rel="canonical" href="http://localhost:1313/boxdocs/folder/technical-guide/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/boxdocs/folder/technical-guide/" itemprop="url" />
   
 
   
@@ -46,7 +46,7 @@ Notes
 
 Branch Development Flow for GIMP to Artbox" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/boxdocs/folder/technical-guide/" /><meta property="article:section" content="boxdocs" />
+<meta property="og:url" content="https://example.org/boxdocs/folder/technical-guide/" /><meta property="article:section" content="boxdocs" />
 
 
 
