--- a/public/boxdocs/folder/troubleshooting/index.html
+++ b/public/boxdocs/folder/troubleshooting/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -15,7 +15,7 @@
   <meta name="description" content="Install and Build Deleting the _build directory Causes a Meson Fail Occasionally, to get GIMP building correctly, you may need to delete the _build directory Meson creates, note the ‘_’. Do not delete the ‘build’ directory! This clears all the old build data and allows a fresh try. However, if you use --wipe or --reconfigure in your build process, and the _build directory is not present or empty, Meson may fail. This could be because Meson requires the _build directory to be present and contain a valid build configuration in order to reconfigure or wipe the build." />
 
   
-    <link rel="canonical" href="http://localhost:1313/boxdocs/folder/troubleshooting/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/boxdocs/folder/troubleshooting/" itemprop="url" />
   
 
   
@@ -25,7 +25,7 @@
     Deleting the _build directory Causes a Meson Fail
     Occasionally, to get GIMP building correctly, you may need to delete the _build directory Meson creates, note the &lsquo;_&rsquo;. Do not delete the &lsquo;build&rsquo; directory! This clears all the old build data and allows a fresh try. However, if you use --wipe or --reconfigure in your build process, and the _build directory is not present or empty, Meson may fail. This could be because Meson requires the _build directory to be present and contain a valid build configuration in order to reconfigure or wipe the build." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/boxdocs/folder/troubleshooting/" /><meta property="article:section" content="boxdocs" />
+<meta property="og:url" content="https://example.org/boxdocs/folder/troubleshooting/" /><meta property="article:section" content="boxdocs" />
 
 
 
