--- a/public/example/folder/example-page/index.html
+++ b/public/example/folder/example-page/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -15,7 +15,7 @@
   <meta name="description" content="example/folder/example-page.md" />
 
   
-    <link rel="canonical" href="http://localhost:1313/example/folder/example-page/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/example/folder/example-page/" itemprop="url" />
   
 
   
@@ -23,7 +23,7 @@
 <meta property="og:title" content="" />
 <meta property="og:description" content="example/folder/example-page.md" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/example/folder/example-page/" /><meta property="article:section" content="example" />
+<meta property="og:url" content="https://example.org/example/folder/example-page/" /><meta property="article:section" content="example" />
 
 
 
