--- a/public/guides/folder/a-linux-system-overview/index.html
+++ b/public/guides/folder/a-linux-system-overview/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -17,7 +17,7 @@ Examples of Linux Distribution Configurations
 Distribution Package Manager Display Manager Desktop Environment Display Server Debian APT GDM GNOME X11 Debian APT LightDM Cinnamon X11 Debian Testing APT GDM GNOME Wayland Fedora DNF GDM GNOME Wayland Arch Linux Pacman SDDM KDE Plasma X11 Key Terms Kernel The core of the operating system that interfaces directly with the hardware, usually Linux." />
 
   
-    <link rel="canonical" href="http://localhost:1313/guides/folder/a-linux-system-overview/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/guides/folder/a-linux-system-overview/" itemprop="url" />
   
 
   
@@ -77,7 +77,7 @@ Key Terms
     Kernel
     The core of the operating system that interfaces directly with the hardware, usually Linux." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/guides/folder/a-linux-system-overview/" /><meta property="article:section" content="guides" />
+<meta property="og:url" content="https://example.org/guides/folder/a-linux-system-overview/" /><meta property="article:section" content="guides" />
 
 
 
