--- a/public/guides/folder/building-a-debug-version/index.html
+++ b/public/guides/folder/building-a-debug-version/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 A debug version is a build of a program that includes additional information, known as debug symbols, to aid in troubleshooting and debugging. Debug symbols help developers pinpoint errors and understand the program’s execution flow. This guide explains how to install and use debug symbols with the GNU Debugger (GDB) on Debian Stable." />
 
   
-    <link rel="canonical" href="http://localhost:1313/guides/folder/building-a-debug-version/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/guides/folder/building-a-debug-version/" itemprop="url" />
   
 
   
@@ -25,7 +25,7 @@ A debug version is a build of a program that includes additional information, kn
 <meta property="og:description" content="IntroductionThis guide is intended for those who are familiar with C programming and have a basic understanding of Linux development. If you&rsquo;re new to debugging or Linux development, you may want to start with some additional resources before proceeding with this guide.
 A debug version is a build of a program that includes additional information, known as debug symbols, to aid in troubleshooting and debugging. Debug symbols help developers pinpoint errors and understand the program&rsquo;s execution flow. This guide explains how to install and use debug symbols with the GNU Debugger (GDB) on Debian Stable." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/guides/folder/building-a-debug-version/" /><meta property="article:section" content="guides" />
+<meta property="og:url" content="https://example.org/guides/folder/building-a-debug-version/" /><meta property="article:section" content="guides" />
 
 
 
