--- a/public/guides/folder/installing-debian/index.html
+++ b/public/guides/folder/installing-debian/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Backup Your Data Before installing Debian, make a complete backup of your Home directory on an external drive. Include any other data folders and files you want to keep. If you have Git repositories, push any wanted changes to the origins to easily restore them after the install. Any unsaved data will be lost." />
 
   
-    <link rel="canonical" href="http://localhost:1313/guides/folder/installing-debian/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/guides/folder/installing-debian/" itemprop="url" />
   
 
   
@@ -26,7 +26,7 @@ Backup Your Data Before installing Debian, make a complete backup of your Home d
 Backup Your Data
     Before installing Debian, make a complete backup of your Home directory on an external drive. Include any other data folders and files you want to keep. If you have Git repositories, push any wanted changes to the origins to easily restore them after the install. Any unsaved data will be lost." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/guides/folder/installing-debian/" /><meta property="article:section" content="guides" />
+<meta property="og:url" content="https://example.org/guides/folder/installing-debian/" /><meta property="article:section" content="guides" />
 
 
 
