--- a/public/guides/folder/system-backup-clonezilla/index.html
+++ b/public/guides/folder/system-backup-clonezilla/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -17,7 +17,7 @@ Once you have your system set up and working well, creating a full backup is cru
 Clonezilla is a free and open-source disk imaging and cloning software. It allows users to create and restore full backups of their computer’s hard drive, making it a popular tool for IT professionals and home users alike." />
 
   
-    <link rel="canonical" href="http://localhost:1313/guides/folder/system-backup-clonezilla/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/guides/folder/system-backup-clonezilla/" itemprop="url" />
   
 
   
@@ -27,7 +27,7 @@ Clonezilla is a free and open-source disk imaging and cloning software. It allow
 Once you have your system set up and working well, creating a full backup is crucial for restoring your environment in case disaster strikes. This backup complements regularly saving your working data.
 Clonezilla is a free and open-source disk imaging and cloning software. It allows users to create and restore full backups of their computer&rsquo;s hard drive, making it a popular tool for IT professionals and home users alike." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/guides/folder/system-backup-clonezilla/" /><meta property="article:section" content="guides" />
+<meta property="og:url" content="https://example.org/guides/folder/system-backup-clonezilla/" /><meta property="article:section" content="guides" />
 
 
 
