--- a/public/guides/folder/using-git-on-linux/index.html
+++ b/public/guides/folder/using-git-on-linux/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Git Overview The code used for making applications is kept in a collection of folders and files on your system. Git is an application that allows us to backup, share, and copy that collection. Git is known as a version control system that allows you to track changes to your code and collaborate with others. It’s a powerful tool that’s widely used in the open-source community. GitLab is a web-based platform that allows you to host and manage your Git repositories online, making it easy to collaborate with others and track changes to your code." />
 
   
-    <link rel="canonical" href="http://localhost:1313/guides/folder/using-git-on-linux/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/guides/folder/using-git-on-linux/" itemprop="url" />
   
 
   
@@ -26,7 +26,7 @@ Git Overview The code used for making applications is kept in a collection of fo
 Git Overview
     The code used for making applications is kept in a collection of folders and files on your system. Git is an application that allows us to backup, share, and copy that collection. Git is known as a version control system that allows you to track changes to your code and collaborate with others. It&rsquo;s a powerful tool that&rsquo;s widely used in the open-source community. GitLab is a web-based platform that allows you to host and manage your Git repositories online, making it easy to collaborate with others and track changes to your code." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/guides/folder/using-git-on-linux/" /><meta property="article:section" content="guides" />
+<meta property="og:url" content="https://example.org/guides/folder/using-git-on-linux/" /><meta property="article:section" content="guides" />
 
 
 
