--- a/public/test/folder/index.html
+++ b/public/test/folder/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -17,7 +17,7 @@ Related Sites Digital Painting
 Design Proposals for Digital Art" />
 
   
-    <link rel="canonical" href="http://localhost:1313/test/folder/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/test/folder/" itemprop="url" />
   
 
   
@@ -25,7 +25,7 @@ Design Proposals for Digital Art" />
 <meta property="og:title" content="Feature Testing" />
 <meta property="og:description" content="Art, Painting, Illustration" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/test/folder/" />
+<meta property="og:url" content="https://example.org/test/folder/" />
 
   
   <meta itemprop="name" content="Feature Testing">
