--- a/public/test/folder/paint-tool/index.html
+++ b/public/test/folder/paint-tool/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Related Links Branches: Artbox and feature-painttool Design Revisions Revision Current Design Issues Changes 1. Easy Cursor Location The Tool Cursor can be turned off in Preferences, and the pointer, leaving the only the brush outline. This is good, but causes issues. A small and minimal cursor can be hard to locate There is a minimum screen size for the cursor, and a small ‘filled’ ‘contact’ circle is always drawn 2. Indicate Erase Mode New Feature It’s not possible to tell if the paintbrush is about to erase whilst looking at the cursor Detect the ‘Eraser Tool’ and ‘Erase Paint’ mode, change the cursor to a dashed circle 3. Simple Brush Boundary Image brushes are drawn as complex outlines based on the image They can make a distracting paintbrush when the image is large and noisy Draw a simple circular boundary if the ‘Simple Brush Boundary’ option is checked in the Paintbrush Options Notes This feature branch only works when merged with the ‘artbox’ branch or rebased onto the ‘options-paintbrush-simple-boundary’ branch" />
 
   
-    <link rel="canonical" href="http://localhost:1313/test/folder/paint-tool/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/test/folder/paint-tool/" itemprop="url" />
   
 
   
@@ -62,7 +62,7 @@ Design Revisions
 Notes
     This feature branch only works when merged with the &lsquo;artbox&rsquo; branch or rebased onto the &lsquo;options-paintbrush-simple-boundary&rsquo; branch" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/test/folder/paint-tool/" /><meta property="article:section" content="test" />
+<meta property="og:url" content="https://example.org/test/folder/paint-tool/" /><meta property="article:section" content="test" />
 
 
 
