--- a/public/test/folder/paintbrush-high-quality-force/index.html
+++ b/public/test/folder/paintbrush-high-quality-force/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Key Concepts and Definitions Brush Stamp: The mask that is used as a brush ‘stamp’. Force: A paintbrush option that affects the pre-processing of the brush stamp. Related Links Branches: Artbox and feature-paintbrush-high-quality-force Design Revisions Revision Current Design Issues Changes 1. Enable High Quality Force It is not active The Force parameter is not working as well as it could Enable Notes This feature is the wonderful work of Elle Stone. Artbox simply enables the option by default. Performance was an issue several years ago, which led to it being deactivated." />
 
   
-    <link rel="canonical" href="http://localhost:1313/test/folder/paintbrush-high-quality-force/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/test/folder/paintbrush-high-quality-force/" itemprop="url" />
   
 
   
@@ -55,7 +55,7 @@ Design Revisions
 Notes
     This feature is the wonderful work of Elle Stone. Artbox simply enables the option by default. Performance was an issue several years ago, which led to it being deactivated." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/test/folder/paintbrush-high-quality-force/" /><meta property="article:section" content="test" />
+<meta property="og:url" content="https://example.org/test/folder/paintbrush-high-quality-force/" /><meta property="article:section" content="test" />
 
 
 
