--- a/public/test/folder/presets-restore/index.html
+++ b/public/test/folder/presets-restore/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Key Concepts and Definitions Tool Presets: A saved set of Tool Options, with an embedded filter that can be configured in the Tool Preset Editor. Related Links Branches: Artbox and feature-presets-restore Design Revisions Revision Current Design Issues Changes 1. Double click active preset to restore Clicking an active preset has no affect User has to select another preset then reselect to restore options to the save preset Double clicking restores the preset " />
 
   
-    <link rel="canonical" href="http://localhost:1313/test/folder/presets-restore/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/test/folder/presets-restore/" itemprop="url" />
   
 
   
@@ -52,7 +52,7 @@ Design Revisions
   
 " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/test/folder/presets-restore/" /><meta property="article:section" content="test" />
+<meta property="og:url" content="https://example.org/test/folder/presets-restore/" /><meta property="article:section" content="test" />
 
 
 
