--- a/public/test/folder/script-fu/index.html
+++ b/public/test/folder/script-fu/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Key Concepts and Definitions Script-Fu: A scripting language based on Scheme Related Links Branches: Artbox and feature-additional-script-fu Additional Procedures Command Purpose (gimp-context-get-display) Get the active display ID (gimp-context-erase-paint-mode-toggle) Toggle the paint mode to erase (gimp-context-eraser-toggle) Toggle the tool to the eraser. (gimp-items-set-visible) Set the visibility of a vector list of items " />
 
   
-    <link rel="canonical" href="http://localhost:1313/test/folder/script-fu/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/test/folder/script-fu/" itemprop="url" />
   
 
   
@@ -60,7 +60,7 @@ Additional Procedures
   
 " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/test/folder/script-fu/" /><meta property="article:section" content="test" />
+<meta property="og:url" content="https://example.org/test/folder/script-fu/" /><meta property="article:section" content="test" />
 
 
 
