--- a/public/themes/folder/index.html
+++ b/public/themes/folder/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -15,7 +15,7 @@
   <meta name="description" content="Introduction Personalize your creative experience with a selection of custom themes for GIMP and Artbox! Whether you prefer a high-contrast interface for easy visibility, a warm and cozy palette, or a dark theme for a more focused environment, these themes offer a variety of options to suit your style. Easy to install and compatible with multiple platforms, these themes will help you tailor the look and feel of your Artbox interface to match your preferences." />
 
   
-    <link rel="canonical" href="http://localhost:1313/themes/folder/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/themes/folder/" itemprop="url" />
   
 
   
@@ -23,7 +23,7 @@
 <meta property="og:title" content="Themes" />
 <meta property="og:description" content="Art, Painting, Illustration" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/themes/folder/" />
+<meta property="og:url" content="https://example.org/themes/folder/" />
 
   
   <meta itemprop="name" content="Themes">
