--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -15,7 +15,7 @@
   <meta name="description" content="Artbox is a digital painting and illustration application for Linux, specifically designed to cater to the needs of artists. It is an open-sourced, artist-adjusted version of GIMP, which allows for more flexibility and customization. The intention behind Artbox is to add new features and modify GUI interactions to make the application more fun and productive for artists. While GIMP is a powerful and versatile tool, its broad user base and design requirements can make it difficult to introduce significant changes. Artbox addresses this limitation by building on top of the GIMP codebase, adding new features that can do more than traditional plug-ins. However, managing these changes carefully is crucial to ensure that Artbox remains stable and compatible with the underlying GIMP codebase." />
 
   
-    <link rel="canonical" href="http://localhost:1313/about/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/about/" itemprop="url" />
   
 
   
@@ -23,7 +23,7 @@
 <meta property="og:title" content="About" />
 <meta property="og:description" content="Art, Painting, Illustration" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/about/" />
+<meta property="og:url" content="https://example.org/about/" />
 
   
   <meta itemprop="name" content="About">
@@ -78,7 +78,7 @@
             title="About"
             href="/about/"
             
-            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-text-gray-600 hover:hx-text-gray-800 dark:hx-text-gray-400 dark:hover:hx-text-gray-200"
+            class="hx-text-sm contrast-more:hx-text-gray-700 contrast-more:dark:hx-text-gray-100 hx-relative -hx-ml-2 hx-hidden hx-whitespace-nowrap hx-p-2 md:hx-inline-block hx-font-medium"
           >
             <span class="hx-text-center">About</span>
           </a><a
