--- a/public/test/folder/filter-restores-last-tool/index.html
+++ b/public/test/folder/filter-restores-last-tool/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Key Concepts and Definitions Filter: A plug-in that processes pixels in a drawable, Hue, Blur etc. Tool Palette: The grid of tool buttons, Move Tool, Paintbrush Tool ect. Related Links Branches: Artbox and feature-filter-restores-last-tool old Merge Request Design Revisions Revision Current Design Issues Changes 1. Restore the previous tool after using a filter The filter is the active tool Confusing to the user to deselect the active tool when a filter is used, and to keep the filter as the active tool Restore the previous tool when a filter dialog is closed " />
 
   
-    <link rel="canonical" href="http://localhost:1313/test/folder/filter-restores-last-tool/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/test/folder/filter-restores-last-tool/" itemprop="url" />
   
 
   
@@ -54,7 +54,7 @@ Design Revisions
   
 " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/test/folder/filter-restores-last-tool/" /><meta property="article:section" content="test" />
+<meta property="og:url" content="https://example.org/test/folder/filter-restores-last-tool/" /><meta property="article:section" content="test" />
 
 
 
