--- a/public/test/folder/paintbrush-options/index.html
+++ b/public/test/folder/paintbrush-options/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Key Concepts and Definitions Reset Brush Option: Resets the slider to a default value. Brush Link Button: Links the paintbrush options to the brush editor options. Expander: A collapsible GUI section for organizing lesser-used options. Related Links Branches: Artbox and feature-paintbrush-options Design Revisions Revision Current Design Issues Changes 1. Remove Reset Brush Button Option sliders have a reset button to default values. Rarely used; adds complexity to the GUI. Remove the reset to default button. 2. Remove Brush Link Button Brush link button allows linking to brush editor options. Difficult to explain and justify; causes confusion Remove the link button. 3. Add Expander for Additional Options Options added to the end of paintbrush settings; more options will be added in the future Lesser-used options clutter the interface and reduce dock space efficiency Add an “Additional Options” expander for lesser-used items 4. Separate Dynamics ‘Enable Dynamics’ contains the ‘Fade and Colour’ options The ‘Fade and Colour’ options take up a lot of space, and do not need to be visible all the time. Add a “Dynamic Fade and Colour” expander, visible when Enable Dynamics is checked 5. Compact Resource Chooser Picking a resource such as a brush or a dynamic is done via a chooser, see the Paintbrush GUI The chooser is takes up two rows of the dockable due to a label above the combo box. The icons on either side are distorted to fill the gap, which looks bad. GUI space is wasted Remove the label and the chooser becomes compact. The purpose of the chooser is self evident and does not need a label 6.Smooth Stroke Position ‘Smooth Stroke’ is in low down in the dock It’s a frequently used option for painting Move higher up the dock " />
 
   
-    <link rel="canonical" href="http://localhost:1313/test/folder/paintbrush-options/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/test/folder/paintbrush-options/" itemprop="url" />
   
 
   
@@ -84,7 +84,7 @@ Design Revisions
   
 " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/test/folder/paintbrush-options/" /><meta property="article:section" content="test" />
+<meta property="og:url" content="https://example.org/test/folder/paintbrush-options/" /><meta property="article:section" content="test" />
 
 
 
