--- a/public/test/folder/toolbox/index.html
+++ b/public/test/folder/toolbox/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -16,7 +16,7 @@
 Key Concepts and Definitions Flowbox: A flexible container that one to three widgets are arranged in. The FG/BG colour area, the active resources and active image. Tool Palette: The grid of tool buttons, Move Tool, Paintbrush Tool ect. FG/BG: The active foreground &amp; background colour widget. Related Links Branches: Artbox and feature-toolbox Revised Preferences Preferences -&gt; Toolbox -&gt; Appearance Show colour, active resources and active image Show only colour, set preferred position and scale. Toolbox placement relative to the tool buttons Top Bottom Left Right Scale the colour widget Design Revisions Revision Current Design Issues Changes 1. Remove Flowbox The Flowbox is positioned beneath the Tool Palette The Flowbox takes up a large amount of GUI space. If only one or two elements are preferred, the GUI space is empty. The size of the FG/BG is restricted by the arrangement. Allow the user to create a simpler toolbox with no wasted space by removing the Flowbox and keeping the FG/BG widget 2. Position and scale the FG/BG widget. New Feature The FG/BG widget may be poorly positioned taking up GUI space. It may be too small on HDPI displays Allow the user to position and scale the FG/BG widget relative to the Tool Palette " />
 
   
-    <link rel="canonical" href="http://localhost:1313/test/folder/toolbox/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/test/folder/toolbox/" itemprop="url" />
   
 
   
@@ -81,7 +81,7 @@ Design Revisions
   
 " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:1313/test/folder/toolbox/" /><meta property="article:section" content="test" />
+<meta property="og:url" content="https://example.org/test/folder/toolbox/" /><meta property="article:section" content="test" />
 
 
 
