--- a/public/test/index.html
+++ b/public/test/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<html lang="en"><head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow" />
@@ -15,7 +15,7 @@
   <meta name="description" content="" />
 
   
-    <link rel="canonical" href="http://localhost:1313/test/" itemprop="url" />
+    <link rel="canonical" href="https://example.org/test/" itemprop="url" />
   
 
   
@@ -23,7 +23,7 @@
 <meta property="og:title" content="Tests" />
 <meta property="og:description" content="Art, Painting, Illustration" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/test/" />
+<meta property="og:url" content="https://example.org/test/" />
 
   
   <meta itemprop="name" content="Tests">
